# Language-Reasoning-JEPA

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  RESULTS.md  pyproject.toml
.codex/: config.toml
automation/: config.example.toml  config.toml  researchctl.py  validate_reports.py  verify_oversight.py
configs/: config.yaml  faithful_vocab.txt  flat_sentence_jepa.yaml  hierarchical_plan.yaml  lm.yaml  plan.yaml  pooled_sentence_jepa.yaml  probe.yaml  semantic_token_hierarchy.yaml  sentence_hierarchy.yaml  sentlm.yaml  token_hierarchy.yaml  token_hierarchy_v2.yaml
docs/: AUTONOMOUS_RESEARCH.md  AUTONOMY_SECURITY.md  RESEARCH_READER_AND_STEERING.md  THREE_PROJECT_MIGRATION.md
projects/: README.md
reports/: discourse_jepa.tex  discourse_jepa_neurips.tex  edit_jepa.tex
research/: CHARTER.md  DECISIONS.md  EVIDENCE.md  EXPERIMENT_INDEX.md  LITERATURE.md  QUESTION_BACKLOG.md  README.md  SHARED_EVIDENCE.md  STATE.md
scripts/: analyze.py  analyze_emergence.py  analyze_failures.py  analyze_intent_representations.py  audit_action_support.py  audit_counterfactual.py  audit_edit_mdlm.py  audit_faithful_token_edit_data.py  audit_faithful_token_edits.py  audit_gar_teacher.py  audit_hierarchy.py  audit_hierarchy_epistemic.py  audit_hierarchy_retrieval.py  audit_hierarchy_support.py  audit_intent_hierarchy.py  audit_macro_heads.py  audit_multiscale_edit.py  audit_sentence_hierarchy.py  audit_sentence_planner_decomposition.py  audit_sequence_edit_storage.sh  audit_subgoal_policy.py  audit_token_closed_loop_decomposition.py  audit_token_hierarchy.py  audit_token_prior.py  (+181 more)
(+682 files in other folders)
